[project]
name = "northstardocs"
version = "0.1.0"
description = "This repo contains the technical documentation on all things related to making Northstar mods."
authors = [{ name = "R2Northstar" }]
requires-python = "~=3.9"
license = "MIT"
dependencies = [
    "pygments[plugins]>=2.16.1,<3",
    "mkdocs-material[imaging]>=9.5.34,<10",
    "mkdocs-git-authors-plugin>=0.9.0,<0.10",
    "mkdocs-link-embeds-plugin>=0.2.0,<0.3",
    "mkdocs-video>=1.5.0,<2",
]

[project.entry-points."pygments.lexers"]
squirrel = "squirrel_syntax:SquirrelLexer"

[dependency-groups]
dev = []

[tool.hatch.build.targets.sdist]
include = ["squirrel_syntax/*.py"]

[tool.hatch.build.targets.wheel]
include = ["squirrel_syntax/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
